RESOLVED FIXED178200
Layout Test http/tests/cache-storage/cache-clearing.https.html is failing
https://bugs.webkit.org/show_bug.cgi?id=178200
Summary Layout Test http/tests/cache-storage/cache-clearing.https.html is failing
Per Arne Vollan
Reported 2017-10-11 18:27:35 PDT
The following layout test is failing on Windows: http/tests/cache-storage/cache-clearing.https.html
Attachments
Patch (23.96 KB, patch)
2017-10-12 14:41 PDT, youenn fablet
no flags
Patch (25.06 KB, patch)
2017-10-12 15:04 PDT, youenn fablet
no flags
Fixing mac32bit (25.09 KB, patch)
2017-10-12 16:10 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-10-12 14:41:34 PDT
youenn fablet
Comment 2 2017-10-12 15:04:18 PDT
youenn fablet
Comment 3 2017-10-12 16:10:14 PDT
Created attachment 323588 [details] Fixing mac32bit
Chris Dumez
Comment 4 2017-10-12 16:17:31 PDT
Comment on attachment 323588 [details] Fixing mac32bit View in context: https://bugs.webkit.org/attachment.cgi?id=323588&action=review > LayoutTests/TestExpectations:470 > +webkit.org/b/178034 http/tests/cache-storage/cache-clearing-all.https.html [ Pass Timeout ] Eh.. isn't this patch supposed to fix the flakiness?
youenn fablet
Comment 5 2017-10-12 16:22:30 PDT
Yes, but I was not able to reproduce the time out locally, so I would prefer to land it like this and remove the expectation after confirming this through the dashboard
WebKit Commit Bot
Comment 6 2017-10-12 17:36:11 PDT
Comment on attachment 323588 [details] Fixing mac32bit Clearing flags on attachment: 323588 Committed r223265: <https://trac.webkit.org/changeset/223265>
WebKit Commit Bot
Comment 7 2017-10-12 17:36:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-10-12 17:37:28 PDT
Note You need to log in before you can comment on or make changes to this bug.